tests/NormalTests/paczka1/fuzzy1/89243422.err
Error in line 1: S243 A468 6,5
Error in line 9: f1Vwl04J A838 66,5
Error in line 6: 7vi7 A838 20,7
